Fix color contrast issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -181,6 +181,7 @@ footer {
 
 .current-support-container.no, .support-case.no {
   background-color: #b94a48;
+  color: #fff;
 }
 
 .current-support-container.pa, .support-case.pa {
